update JDK version to 21 or 17 in Scala frameworks to get the performance improvements from recent JDK versions: (#9837)
- akka-http
- blaze
- cask
- finagle
- finatra
- finch
- http4s
- otavia
- pekko-http
- scalene
- vertx-web-scala
- youi